--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -16,12 +16,15 @@
     "package": "com.huawei.karaokedemo",
     "name": ".MyApplication",
     "deviceType": [
-      "phone"
+      "phone",
+      "tablet",
+      "tv"
     ],
     "distro": {
       "deliveryWithInstall": true,
       "moduleName": "entry",
-      "moduleType": "entry"
+      "moduleType": "entry",
+      "installationFree": true
     },
     "abilities": [
       {
@@ -42,6 +45,18 @@
         "label": "$string:app_name",
         "type": "page",
         "launchType": "standard"
+      },
+      {
+        "backgroundModes": [
+          "bluetoothInteraction",
+          "wifiInteraction",
+          "multiDeviceConnection"
+        ],
+        "name": "com.huawei.karaokedemo.ServiceAbility",
+        "icon": "$media:icon",
+        "description": "$string:serviceability_description",
+        "type": "service",
+        "visible": true
       }
     ],
     "reqPermissions": [
