fix controller app install issue

--- a/controller/src/main/config.json
+++ b/controller/src/main/config.json
@@ -24,8 +24,7 @@
     "distro": {
       "deliveryWithInstall": true,
       "moduleName": "controller",
-      "moduleType": "entry",
-      "installationFree": true
+      "moduleType": "entry"
     },
     "abilities": [
       {
